--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     /*background-color: black;*/
     flex: 1;
     background-color: #2d2c2c;
-    padding: 30px;
+    padding: 40px;
     margin: 3px;
     overflow: auto;
 }
@@ -33,3 +33,56 @@ body {
     padding: 30px;
     overflow: auto;
 }
+
+Dropdown Button
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    align-self: right;
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    width: "100%";
+    background-color: #1e1e1e;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropbtnchoice {
+    margin-top: 2px;
+    border: none;
+    cursor: pointer;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;} 
